Fix text sizes on mobile

--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -34,6 +34,7 @@ a{
     flex-direction: column;
     padding: 25px;
     text-align: center;
+    position: relative;
 }
 
 img{
@@ -189,16 +190,8 @@ svg.phone-only{
         font-size: 2.8rem;
     }
 
-    img{
-        max-height: 230px;
-    }
-
-    .map-bg{
-        padding: 1rem;
-    }
-
     .link a{
-        font-size: 1.2rem;
+        font-size: 3.2rem;
     }
 
     .svg-wrapper{
